<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/resetButton"
        android:layout_width="119dp"
        android:layout_height="79dp"
        android:text="@string/resetButton"
        android:visibility="invisible"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/centralTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/centralTextView"
        android:layout_width="447dp"
        android:layout_height="69dp"
        android:gravity="center"
        android:text = "@string/centralTextViewDefault"
        android:textColor="@color/green"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398" />

    <Button
        android:id="@+id/decreasePassengerButton"
        android:layout_width="90dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/lightGrey"
        android:layout_marginBottom="24dp"
        android:text="@string/decreasePassengerButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/increasePassengerButton"
        android:layout_width="90dp"
        android:layout_height="62dp"
        android:backgroundTint="@color/green"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/increasePassengerButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/counterTextView"
        android:layout_width="118dp"
        android:layout_height="69dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/counterTextView"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/increasePassengerButton"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toEndOf="@+id/decreasePassengerButton" />

</androidx.constraintlayout.widget.ConstraintLayout>